Left with Design of front end

--- a/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
+++ b/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
@@ -12,7 +12,9 @@
 	<div class="">
 		<button class='btn btn-success' (click)="JACKPOT()">JACKPOT</button>
 	</div>
-
+	<div class="">
+		<button class='btn btn-success' (click)="getDataFromAPI()">DrawHistory</button>
+	</div>
 	<div class="card-footer">
 		<h4> The numbers are {{result}} </h4>
 		<h4> The numbers are {{result1}} </h4>
@@ -20,27 +22,15 @@
 		<h4> The numbers are {{result3}} </h4>
 		<h4> The numbers are {{result4}} </h4>
 	</div>
+
+	<ul *ngFor="let d of data">
+		<li>{{d.id}}</li>
+		<li>{{d.player}}</li>
+		<li>{{d.chance1}}</li>
+		<li>{{d.chance2}}</li>
+		<li>{{d.chance3}}</li>
+		<li>{{d.chance4}}</li>
+		<li>{{d.chance5}}</li>
+	</ul>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
-    </ul>
-  </div>
-</nav>
