--- a/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
+++ b/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
@@ -1,20 +1,27 @@
+
+        <div class="container">
+        
+       <h1>
+        Welcome to Lottery Game!
+      </h1>
+
+
+
 <div class='card'>
 	<div class='card-header'>LETS PLAY</div>
 	<div class="card-body"></div>
 	<div class="form-group d-flex flex-row">
-		<input type="number" name="num1" class="form-control" value={{result}}>
-		<input type="number" name="num2" class="form-control" value={{result1}}>
-		<input type="number" name="num3" class="form-control" value={{result2}}>
-		<input type="number" name="num4" class="form-control" value={{result3}}>
-		<input type="number" name="num5" class="form-control" value={{result4}}>
+		<input type="number" name="num1" class="form-control" value={{result}} readonly="readonly">
+		<input type="number" name="num2" class="form-control" value={{result1}} readonly="readonly">
+		<input type="number" name="num3" class="form-control" value={{result2}} readonly="readonly">
+		<input type="number" name="num4" class="form-control" value={{result3}} readonly="readonly">
+		<input type="number" name="num5" class="form-control" value={{result4}} readonly="readonly">
 	</div>
 
 	<div class="">
 		<button class='btn btn-success' (click)="JACKPOT()">JACKPOT</button>
 	</div>
-	<div class="">
-		<button class='btn btn-success' (click)="getDataFromAPI()">DrawHistory</button>
-	</div>
+	<br>
 	<div class="card-footer">
 		<h4> The numbers are {{result}} </h4>
 		<h4> The numbers are {{result1}} </h4>
@@ -23,14 +30,23 @@
 		<h4> The numbers are {{result4}} </h4>
 	</div>
 
+	<br>
+	<div class="">
+		<button class='btn btn-success' (click)="getDataFromAPI()">DrawHistory</button>
+	</div>
+	<br>
 	<ul *ngFor="let d of data">
-		<li>{{d.id}}</li>
-		<li>{{d.player}}</li>
-		<li>{{d.chance1}}</li>
-		<li>{{d.chance2}}</li>
-		<li>{{d.chance3}}</li>
-		<li>{{d.chance4}}</li>
-		<li>{{d.chance5}}</li>
+		
+		<!-- {{d.player}} -->
+		<li>Numbers appeared in - {{d.id}} Round</li>
+		<br>
+	<div class="form-group d-flex flex-row">
+		<input type="number" name="num1" class="form-control" value={{d.chance1}} readonly="readonly">
+		<input type="number" name="num2" class="form-control" value={{d.chance2}} readonly="readonly">
+		<input type="number" name="num3" class="form-control" value={{d.chance3}} readonly="readonly">
+		<input type="number" name="num4" class="form-control" value={{d.chance4}} readonly="readonly">
+		<input type="number" name="num5" class="form-control" value={{d.chance5}} readonly="readonly">
+	</div>
 	</ul>
 </div>
-
+ </div>
