--- a/LotteryUI/src/app/app.component.html
+++ b/LotteryUI/src/app/app.component.html
@@ -6,7 +6,7 @@
 
 
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#">Lottery Game</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -20,12 +20,45 @@
         <a class="nav-link" href="#"> Lets Play <span class="sr-only">(current)</span></a>
       </li>
             <li class="nav-item active">
-        <a class="nav-link" href="#">Draw History<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/DrawHistory">Draw History<span class="sr-only">(current)</span></a>
       </li>
     </ul>
   </div>
-</nav>
+</nav> -->
 
-<div class="container">
-<app-lotterydraw></app-lotterydraw>
-</div>
+
+
+<main role="main" class="container">      
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="/">Lottery App</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/about">About</a>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="/Play">Lottery</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div style="text-align:center">
+ <!--      <h1>
+        Welcome to Lottery Game!
+        <div class="container">
+        <app-lotterydraw></app-lotterydraw>
+        </div>
+      </h1> -->
+      <hr> 
+    </div>
+    <router-outlet></router-outlet>
+    <!-- <app-logs></app-logs> -->
+</main>
