--- a/LotteryUI/src/app/app.component.html
+++ b/LotteryUI/src/app/app.component.html
@@ -37,26 +37,20 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" routerLink="/">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">About</a>
+            <a class="nav-link" routerLink="/about">About <span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/Play">Lottery</a>
+            <a class="navbar-brand" href="/Play">Lottery Game Start</a>
           </li>
         </ul>
       </div>
     </nav>
     <div style="text-align:center">
- <!--      <h1>
+      <h1>
         Welcome to Lottery Game!
-        <div class="container">
-        <app-lotterydraw></app-lotterydraw>
-        </div>
-      </h1> -->
+      </h1>
       <hr> 
     </div>
     <router-outlet></router-outlet>
