added read me file

--- a/LotteryUI/src/app/about/about.component.html
+++ b/LotteryUI/src/app/about/about.component.html
@@ -47,3 +47,39 @@
 ID Uniqueness -ALTER TABLE players ADD UNIQUE (id);</b></h3>
 		</pre>
 	</code>
+</figure>
+<h2>How to Navigate through Web tool</h2>
+
+<ul>
+	<li>About Tab will take to Description of the Project</li>
+	<br/>
+
+	<li>Lottery Game will take to Gaming area to Play Lottery</li>
+</ul>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
