--- a/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
+++ b/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
@@ -19,7 +19,7 @@
 	</div>
 
 	<div class="">
-		<button class='btn btn-success' (click)="JACKPOT()">JACKPOT</button>
+		<button class='btn btn-success' (click)="JACKPOT()" id="myButton1">JACKPOT</button>
 	</div>
 	<br>
 	<div class="card-footer">
