--- a/LotteryUI/src/app/app.component.html
+++ b/LotteryUI/src/app/app.component.html
@@ -21,8 +21,8 @@
       <h1>
         Welcome to Lottery Game!
       </h1>
-      <hr> 
-    </div>
+      <img src = "/assets/Images/Homescreen.png" alt="Mountain" class="img-thumbnail">
+      </div>
     <router-outlet></router-outlet>
     <!-- <app-logs></app-logs> -->
 </main>
