--- a/LotteryUI/src/app/app.component.html
+++ b/LotteryUI/src/app/app.component.html
@@ -22,6 +22,8 @@
         Welcome to Lottery Game!
       </h1>
       <img src = "/assets/Images/Homescreen.png" alt="Mountain" class="img-thumbnail">
+      <img src = "/assets/Images/Lottery/Left.png" alt="Mountain" class="img-thumbnail">
+      <!-- <img src = "/assets/Images/Lottery/Right.png" alt="Mountain" class="img-thumbnail"> -->
       </div>
     <router-outlet></router-outlet>
     <!-- <app-logs></app-logs> -->
