--- a/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
+++ b/LotteryUI/src/app/lotterydraw/lotterydraw.component.html
@@ -1,7 +1,9 @@
 
+
  <div class="container">
         
-
+		<!-- <div class="content1">CONTENT 1 </div>
+        <div class="content2">CONTENT 2 </div> -->
 
 	<div class='card'>
 		<div class='card-header'>LETS PLAY</div>
@@ -47,3 +49,4 @@
 		</ul>
 	</div>
 </div>
+
